--- a/package.json
+++ b/package.json
@@ -1,24 +1,53 @@
 {
-  "author": "Cam Pedersen <diffference@gmail.com> (http://campedersen.com/)",
+  "author": {
+    "name": "Cam Pedersen",
+    "email": "diffference@gmail.com",
+    "url": "http://campedersen.com/"
+  },
   "contributors": [
-    { "name": "Rick Waldron", "email": "waldron.rick@gmail.com" },
-    { "name": "Leonhardt Wille", "email": "wille@riverlabs.de" },
-    { "name": "Seiya Konno", "email": "nulltask@gmail.com" },
-    { "name": "Nathan Vander Wilt", "email": "nate@calftrail.com" },
-    { "name": "Adam Brault (&yet)", "email": "contact@andyet.com" },
-    { "name": "Emanuele Tessore", "email": "setola@gmail.com" }
+    {
+      "name": "Laurence HR",
+      "email": "laurencehr@gmail.com"
+    },
+    {
+      "name": "Rick Waldron",
+      "email": "waldron.rick@gmail.com"
+    },
+    {
+      "name": "Leonhardt Wille",
+      "email": "wille@riverlabs.de"
+    },
+    {
+      "name": "Seiya Konno",
+      "email": "nulltask@gmail.com"
+    },
+    {
+      "name": "Nathan Vander Wilt",
+      "email": "nate@calftrail.com"
+    },
+    {
+      "name": "Adam Brault",
+      "email": "contact@andyet.com",
+      "url": "&yet"
+    },
+    {
+      "name": "Emanuele Tessore",
+      "email": "setola@gmail.com"
+    }
   ],
-  "name": "duino",
-  "description": "Arduino framework for mad scientists",
-  "version": "0.0.9",
+  "name": "win-duino",
+  "description": "Arduino framework for use node.js on Windows based on duino",
+  "version": "0.0.1",
   "keywords": [
     "arduino",
     "serial",
-    "framework"
+    "framework",
+    "duino",
+    "win-duino"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/ecto/duino.git"
+    "url": "git://github.com/laurenceHR/win-duino"
   },
   "main": "index.js",
   "engines": {
@@ -28,5 +57,16 @@
     "serialport": "*",
     "colors": "*"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "readme": "win-duino\r\n=========\r\n\r\nwin-duino: a duino update for working with Arduino in node.js on Windows\r\nFrom the original duino-project (Unix) to use it with node on Windows OS!\r\nFor \"duino\" see: https://github.com/ecto/duino\r\n\r\n# install\r\n\r\nchange only the ./lib/board.js \r\n\r\n# Windows COM Port selection\r\n\r\n````javascript\r\nvar board = new arduino.Board({\r\n  debug: true,\r\n  device: 'COM5',\r\n  baudrate: 9600\r\n});\r\n````\r\n\r\n# usage\r\n\r\n````javascript\r\nvar arduino = require('../');\r\n\r\nvar board = new arduino.Board({\r\n  debug: true,\r\n  device: 'COM5'  \r\n});\r\n\r\nvar led = new arduino.Led({\r\n  board: board,\r\n  pin: 13\r\n});\r\n\r\nboard.on('ready', function(){\r\n  led.blink();\r\n});\r\n\r\n````\r\n\r\n# documentation\r\n\r\nFor detail documentation see duino: \r\nhttps://github.com/ecto/duino\r\n\r\n",
+  "readmeFilename": "README.md",
+  "gitHead": "94eea2f73693c21661d959d506c0eb04b67d35fd",
+  "bugs": {
+    "url": "https://github.com/laurenceHR/win-duino/issues"
+  },
+  "homepage": "https://github.com/laurenceHR/win-duino",
+  "_id": "win-duino@0.0.1",
+  "scripts": {},
+  "_shasum": "901f53f7d398ace9ea88f633492114966a929b15",
+  "_from": "win-duino@"
 }
